--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -14,13 +14,15 @@ spec:
     chart: velero
     helm:
       values: |
-        proxyAddressForwarding: true
-        postgresql:
-          postgresqlPassword: keycloak
-        ingress:
-          enabled: true
-          hostname: cartemembre.jeancloude.club
-    repoURL: https://vmware-tanzu.github.io/helm-charts
+        provider: aws
+        credentials:
+          name: velero-ovh-de-secret
+          secretContents: 
+            cloud: |
+              [default]
+              aws_access_key_id=951d972e2b8d478daa89970e7cb13ec9
+              aws_secret_access_key=dd0438eab0da4eb7b8ffb0dbfb310ab6
+      repoURL: https://vmware-tanzu.github.io/helm-charts
     targetRevision: 2.27.1
   syncPolicy:
     # automated:
