--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -20,11 +20,13 @@ spec:
             bucket: club-jeancloude-velero
         credentials:
           name: velero-ovh-de-secret
-          secretContents: 
-            cloud: |
-              [default]
-              aws_access_key_id=951d972e2b8d478daa89970e7cb13ec9
-              aws_secret_access_key=dd0438eab0da4eb7b8ffb0dbfb310ab6
+          extraEnvVars:
+            OS_AUTH_URL: https://auth.cloud.ovh.net/v3/
+            OS_PASSWORD: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
+            OS_USERNAME: user-KPNf2CXgFmYY
+            OS_PROJECT_ID: de9eaa1e9cc94734bf787165a68f4d01
+            OS_REGION_NAME: DE
+            OS_DOMAIN_NAME: Default
         initContainers:
         - name: velero-plugin-openstack
           image: lirt/velero-plugin-for-openstack:v0.3.1
