--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -20,6 +20,7 @@ spec:
             bucket: club-jeancloude-velero
         credentials:
           name: velero-ovh-de-secret
+          extraSecretRef: velero-ovh-de-secret
           extraEnvVars:
             OS_AUTH_URL: https://auth.cloud.ovh.net/v3/
             OS_PASSWORD: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
