--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: jeancloude-club-velero
+    namespace: velero
   project: jeancloude.club
   source:
     chart: velero
