--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -19,6 +19,8 @@ spec:
           backupStorageLocation:
             bucket: velero
             prefix: jeancloude.club
+          volumeSnapshotLocation:
+            name: volume-snapshots
         credentials:
           name: velero-ovh-de-secret
           extraSecretRef: velero-ovh-de-secret
@@ -37,13 +39,13 @@ spec:
             - mountPath: /target
               name: plugins
         backupsEnabled: true
-        snapshotsEnabled: false
+        snapshotsEnabled: true
         schedules:
           traefik:
             disabled: false
             schedule: "0 0 * * *"
             template:
-              ttl: "24h"
+              ttl: "48h"
               includedNamespaces:
               - traefik
         upgradeCRDs: false
