--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -32,6 +32,12 @@ spec:
             OS_REGION_NAME: DE1
             OS_DOMAIN_NAME: Default
         initContainers:
+        - name: velero-plugin-for-csi
+          image: velero/velero-plugin-for-csi:v0.2.0
+          imagePullPolicy: IfNotPresent
+          volumeMounts:
+            - mountPath: /target
+              name: plugins
         - name: velero-plugin-openstack
           image: lirt/velero-plugin-for-openstack:v0.3.1
           imagePullPolicy: IfNotPresent
