--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -29,7 +29,7 @@ spec:
             OS_PASSWORD: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
             OS_USERNAME: user-KPNf2CXgFmYY
             OS_PROJECT_ID: de9eaa1e9cc94734bf787165a68f4d01
-            OS_REGION_NAME: DE1
+            OS_REGION_NAME: DE
             OS_DOMAIN_NAME: Default
           secretContents: 
             cloud: |
