--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -20,17 +20,22 @@ spec:
             bucket: velero
             prefix: jeancloude.club
           volumeSnapshotLocation:
-            name: volume-snapshots
+            name: default
         credentials:
-          name: velero-ovh-de-secret
-          extraSecretRef: velero-ovh-de-secret
+          name: velero-credentials
+          extraSecretRef: velero-credentials
           extraEnvVars:
-            OS_AUTH_URL: https://auth.cloud.ovh.net/v3/
-            OS_PASSWORD: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
-            OS_USERNAME: user-KPNf2CXgFmYY
-            OS_PROJECT_ID: de9eaa1e9cc94734bf787165a68f4d01
-            OS_REGION_NAME: DE
-            OS_DOMAIN_NAME: Default
+            OS_REGION_NAME: DE1
+        clouds:
+          default:
+            region_name: DE
+            auth:
+              auth_url: https://auth.cloud.ovh.net/v3/
+              username: user-KPNf2CXgFmYY
+              password: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
+              project_name: de9eaa1e9cc94734bf787165a68f4d01
+              project_domain_name: Default
+              user_domain_name: Default
         initContainers:
         - name: velero-plugin-openstack
           image: lirt/velero-plugin-for-openstack:v0.3.1
