--- a/apps/templates/velero.yaml
+++ b/apps/templates/velero.yaml
@@ -33,7 +33,7 @@ spec:
             OS_DOMAIN_NAME: Default
         initContainers:
         - name: velero-plugin-openstack
-          image: constructions-incongrues.net/velero-plugin-for-openstack:cinder-fix
+          image: constructionsincongrues.net/velero-plugin-for-openstack:cinder-fix
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /target
