--- a/apps/templates/kasten.yaml
+++ b/apps/templates/kasten.yaml
@@ -24,7 +24,7 @@ spec:
         ingress:
           enabled: true
     repoURL: https://charts.kasten.io/
-    targetRevision: 3.1.0
+    targetRevision: k10-4.5.6
   syncPolicy:
     automated:
       prune: true
