--- a/apps/templates/kasten.yaml
+++ b/apps/templates/kasten.yaml
@@ -14,15 +14,8 @@ spec:
     chart: k10
     helm:
       values: |
-        mongodb:
-          auth:
-            rootPassword: root
-            username: mongo
-            password: mongo
-            database: rocketchat
-        host: allo.jeancloude.club
         ingress:
-          enabled: true
+          create: true
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
