--- a/apps/templates/kasten.yaml
+++ b/apps/templates/kasten.yaml
@@ -14,6 +14,9 @@ spec:
     chart: k10
     helm:
       values: |
+        auth:
+          basicAuth:
+            htpasswd: "tristan:{SHA}K+iK4HpzuMKnVlbTaxQSkD9/eLg="
         ingress:
           create: true
     repoURL: https://charts.kasten.io/
