--- a/apps/templates/rocketchat.yaml
+++ b/apps/templates/rocketchat.yaml
@@ -27,7 +27,7 @@ spec:
     targetRevision: 3.1.0
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
