--- a/apps/templates/rocketchat.yaml
+++ b/apps/templates/rocketchat.yaml
@@ -26,8 +26,8 @@ spec:
     repoURL: https://rocketchat.github.io/helm-charts
     targetRevision: 3.1.0
   syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
+    # automated:
+    #   prune: false
+    #   selfHeal: false
     syncOptions:
       - CreateNamespace=true
