--- a/apps/templates/kasten.yaml
+++ b/apps/templates/kasten.yaml
@@ -23,8 +23,8 @@ spec:
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    # automated:
+    #   prune: true
+    #   selfHeal: true
     syncOptions:
       - CreateNamespace=true
