--- a/apps/templates/longhorn.yaml
+++ b/apps/templates/longhorn.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: jeancloude-club-longhorn
+    namespace: longhorn-system
   project: jeancloude.club
   source:
     chart: longhorn
