--- a/apps/templates/longhorn.yaml
+++ b/apps/templates/longhorn.yaml
@@ -17,6 +17,11 @@ spec:
         ingress:
           enabled: true
           host: longhorn.jeancloude.club
+        csi:
+          attacherReplicaCount: 1
+          provisionerReplicaCount: 1
+          resizerReplicaCount: 1
+          snapshotterReplicaCount: 1
     repoURL: https://charts.longhorn.io
     targetRevision: 1.2.3
   syncPolicy:
