--- a/apps/templates/external-dns.yaml
+++ b/apps/templates/external-dns.yaml
@@ -15,6 +15,8 @@ spec:
     helm:
       values: |
         provider: cloudflare
+        sources:
+          - ingress
         cloudflare:
           apiToken: C6l3Ek8k13OzXHmvJp413hrFXQNUHBGIb20X476x
     repoURL: https://charts.bitnami.com/bitnami
