--- a/apps/templates/rocketchat.yaml
+++ b/apps/templates/rocketchat.yaml
@@ -23,6 +23,8 @@ spec:
         host: allo.jeancloude.club
         ingress:
           enabled: true
+          annotations:
+            external-dns.alpha.kubernetes.io/hostname: allo.jeancloude.club
     repoURL: https://rocketchat.github.io/helm-charts
     targetRevision: 3.1.0
   syncPolicy:
