--- a/apps/templates/external-dns.yaml
+++ b/apps/templates/external-dns.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: jeancloude-club-externaldns
+    namespace: kube-system
   project: jeancloude.club
   source:
     chart: external-dns
