--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -20,6 +20,8 @@ spec:
         ingress:
           enabled: true
           hostname: cartemembre.jeancloude.club
+          annotations:
+            external-dns.alpha.kubernetes.io/hostname: cartemembre.jeancloude.club
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 5.2.8
   syncPolicy:
