--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: jeancloude-club-kubecost
   project: jeancloude.club
   source:
-    chart: kubecost
+    chart: cost-analyzer
     helm:
       values: |
         kubecostToken: dHJpc3RhbkByaXZvYWxsYW4ubmV0xm343yadf98
@@ -20,7 +20,7 @@ spec:
           annotations:
             external-dns.alpha.kubernetes.io/hostname: kubecost.jeancloude.club
     repoURL: https://kubecost.github.io/cost-analyzer/
-    targetRevision: v1.89.0-rc.2
+    targetRevision: 1.89.0-rc.2
   syncPolicy:
     # automated:
     #   prune: false
