--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -20,7 +20,7 @@ spec:
           annotations:
             external-dns.alpha.kubernetes.io/hostname: kubecost.jeancloude.club
     repoURL: https://kubecost.github.io/cost-analyzer/
-    targetRevision: 1.89.0-rc.2
+    targetRevision: 1.88.1
   syncPolicy:
     # automated:
     #   prune: false
