--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -17,6 +17,8 @@ spec:
         kubecostToken: dHJpc3RhbkByaXZvYWxsYW4ubmV0xm343yadf98
         ingress:
           enabled: true
+          hosts:
+             - kubecost.jeancloude.club
           annotations:
             external-dns.alpha.kubernetes.io/hostname: kubecost.jeancloude.club
     repoURL: https://kubecost.github.io/cost-analyzer/
