--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -21,6 +21,10 @@ spec:
              - kubecost.jeancloude.club
           annotations:
             external-dns.alpha.kubernetes.io/hostname: kubecost.jeancloude.club
+        networkCosts:
+          enabled: true
+        clusterName: Icekubes
+        currencyCode: EUR
     repoURL: https://kubecost.github.io/cost-analyzer/
     targetRevision: 1.89.0-rc.2
   syncPolicy:
