--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -23,7 +23,7 @@ spec:
             external-dns.alpha.kubernetes.io/hostname: kubecost.jeancloude.club
         networkCosts:
           enabled: true
-        kubecostProductConfigs;
+        kubecostProductConfigs:
           clusterName: Icekubes
           currencyCode: EUR
     repoURL: https://kubecost.github.io/cost-analyzer/
