--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -18,7 +18,7 @@ spec:
           snapshotController:
             enabled: true
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
-    targetRevision: 1.22.1
+    targetRevision: v1.22.1
   syncPolicy:
     # automated:
     #   prune: false
