--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -29,6 +29,7 @@ spec:
               password=ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
               tenant-id=de9eaa1e9cc94734bf787165a68f4d01
               domain-id=default
+              domain-name=default
               region=GRA5
               regions=GRA3,GRA5,GRA7
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
