--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -25,11 +25,10 @@ spec:
             cloud-config: |-
               [Global]
               auth-url=https://auth.cloud.ovh.net/v3
-              user-id=user-KPNf2CXgFmYY
-              password=ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
+              user-id=user-xUukp5UXvZyp
+              password=vGdHXCW49Rt8BrfaDWVSWkVaSKgCMAnz
               tenant-id=de9eaa1e9cc94734bf787165a68f4d01
-              region=GRA5
-              regions=GRA3,GRA5,GRA7
+              region=GRA
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
