--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -28,6 +28,7 @@ spec:
               user-id=user-xUukp5UXvZyp
               password=vGdHXCW49Rt8BrfaDWVSWkVaSKgCMAnz
               tenant-name=8966606530353673
+              domain-name=Default
               region=GRA5
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
