--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -41,7 +41,7 @@ spec:
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
-    targetRevision: 1.22.0
+    targetRevision: v1.22.1
   syncPolicy:
     # automated:
     #   prune: false
