--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -14,6 +14,9 @@ spec:
     chart: openstack-cinder-csi
     helm:
       values: |
+        csi:
+          snapshotController:
+            enabled: true
         secret:
           enabled: true
           create: true
