--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -37,6 +37,8 @@ spec:
               name: csi-cinder-snapclass
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
+            parameters:
+              force-create: false
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
