--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -38,7 +38,7 @@ spec:
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
             parameters:
-              force-create: false
+              force-create: 'false'
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
