--- a/apps/templates/system/velero.yaml
+++ b/apps/templates/system/velero.yaml
@@ -28,14 +28,13 @@ spec:
           extraEnvVars:
             OS_AUTH_URL: https://auth.cloud.ovh.net/v3/
             OS_PASSWORD: ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
-            OS_USERNAME: user-KPNf2CXgFmYY
-            OS_PROJECT_ID: de9eaa1e9cc94734bf787165a68f4d01
-            OS_REGION_NAME: DE
+            OS_USERNAME: user-xUukp5UXvZyp
+            OS_TENANT_NAME: 8966606530353673
+            OS_REGION_NAME: DE1
             OS_DOMAIN_NAME: Default
-            OS_REGION_NAME_CINDER: DE1
         initContainers:
         - name: velero-plugin-openstack
-          image: constructionsincongrues/velero-plugin-for-openstack:cinder-fix
+          image: lirt/velero-plugin-for-openstack:v0.3.0
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /target
