--- a/apps/templates/system/cloud-provider-openstack.yaml
+++ b/apps/templates/system/cloud-provider-openstack.yaml
@@ -36,11 +36,11 @@ spec:
             metadata:
               name: csi-cinder-snapclass
               labels:
-                velero.io/csi-volumesnapshot-class: 'true'
+                velero.io/csi-volumesnapshot-class: "true"
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
             parameters:
-              force-create: 'true'
+              force-create: "true"
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
