--- a/apps/templates/system/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/csi/openstack-cinder-csi.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cloud-provider-openstack
+  name: openstack-cinder-csi
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-system
-  project: default
+    namespace: csi
+  project: system
   source:
     chart: openstack-cinder-csi
     helm:
@@ -28,19 +28,7 @@ spec:
               domain-name=Default
               region=GRA5
         storageClass:
-          enabled: true
-          custom: |-
-            ---
-            apiVersion: snapshot.storage.k8s.io/v1beta1
-            kind: VolumeSnapshotClass
-            metadata:
-              name: csi-cinder-snapclass
-              labels:
-                velero.io/csi-volumesnapshot-class: "true"
-            driver: cinder.csi.openstack.org
-            deletionPolicy: Delete
-            parameters:
-              force-create: "true"
+          enabled: false
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
