--- a/apps/templates/system/csi/external-snapshotter/csi-snapshotter.yaml
+++ b/apps/templates/system/csi/external-snapshotter/csi-snapshotter.yaml
@@ -11,3 +11,9 @@ spec:
     repoURL: 'https://github.com/kubernetes-csi/external-snapshotter'
     targetRevision: v5.0.0
   project: system
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
