--- a/apps/templates/system/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/csi/openstack-cinder-csi.yaml
@@ -32,8 +32,8 @@ spec:
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
-    # automated:
-    #   prune: false
-    #   selfHeal: false
+    automated:
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
