--- a/apps/templates/system/csi/external-snapshotter/crd.yaml
+++ b/apps/templates/system/csi/external-snapshotter/crd.yaml
@@ -2,6 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: external-snapshotter-crd
+  namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: 'csi'
