--- a/apps/templates/system/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/csi/openstack-cinder-csi.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: csi
+    namespace: kube-system
   project: system
   source:
     chart: openstack-cinder-csi
@@ -27,13 +27,11 @@ spec:
               tenant-name=8966606530353673
               domain-name=Default
               region=GRA5
-        storageClass:
-          enabled: false
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
