--- a/apps/templates/allo/rocketchat.yaml
+++ b/apps/templates/allo/rocketchat.yaml
@@ -29,7 +29,7 @@ spec:
     targetRevision: 3.1.0
   syncPolicy:
     # automated:
-    #   prune: false
+    #   prune: true
     #   selfHeal: false
     syncOptions:
       - CreateNamespace=true
