--- a/apps/templates/system/traefik.yaml
+++ b/apps/templates/system/traefik.yaml
@@ -28,6 +28,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
