--- a/apps/templates/system/velero.yaml
+++ b/apps/templates/system/velero.yaml
@@ -78,6 +78,6 @@ spec:
   syncPolicy:
     # automated:
     #   prune: true
-    #   selfHeal: true
+    #   selfHeal: false
     syncOptions:
       - CreateNamespace=true
