--- a/apps/templates/system/csi/external-snapshotter/csi-snapshotter.yaml
+++ b/apps/templates/system/csi/external-snapshotter/csi-snapshotter.yaml
@@ -13,7 +13,7 @@ spec:
     path: deploy/kubernetes/csi-snapshotter
     repoURL: 'https://github.com/kubernetes-csi/external-snapshotter'
     targetRevision: v5.0.0
-  project: system
+  project: snapshots
   syncPolicy:
     automated:
       prune: true
