--- a/apps/templates/system/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/csi/openstack-cinder-csi.yaml
@@ -27,6 +27,18 @@ spec:
               tenant-name=8966606530353673
               domain-name=Default
               region=GRA5
+        storageClass:
+          enabled: true
+          custom: |-
+            apiVersion: snapshot.storage.k8s.io/v1
+            kind: VolumeSnapshotClass
+            metadata:
+              name: csi-cinder-snapclass
+              velero.io/csi-volumesnapshot-class: true
+            driver: cinder.csi.openstack.org
+            deletionPolicy: Delete
+            parameters:
+              force-create: true
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
