--- a/apps/templates/system/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/csi/openstack-cinder-csi.yaml
@@ -35,7 +35,7 @@ spec:
             metadata:
               name: csi-cinder-snapclass
               labels:
-                velero.io/csi-volumesnapshot-class: true
+                velero.io/csi-volumesnapshot-class: 'true'
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
             parameters:
