--- a/apps/templates/system/csi/external-snapshotter/crd.yaml
+++ b/apps/templates/system/csi/external-snapshotter/crd.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     path: client/config/crd
     repoURL: 'https://github.com/kubernetes-csi/external-snapshotter'
-    targetRevision: v5.0.0
+    targetRevision: release-4.2
   project: snapshots
   syncPolicy:
     automated:
