--- a/apps/templates/system/snapshot/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshot/openstack-cinder-csi.yaml
@@ -46,7 +46,7 @@ spec:
             driver: cinder.csi.openstack.org
             deletionPolicy: Delete
             parameters:
-              - force-create: '1'
+              force-create: '1'
     repoURL: https://kubernetes.github.io/cloud-provider-openstack
     targetRevision: 1.4.9
   syncPolicy:
