--- a/apps/templates/system/snapshot/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshot/openstack-cinder-csi.yaml
@@ -27,11 +27,11 @@ spec:
             cloud-config: |-
               [Global]
               auth-url=https://auth.cloud.ovh.net/v3/
-              username=user-xUukp5UXvZyp
-              password=vGdHXCW49Rt8BrfaDWVSWkVaSKgCMAnz
+              username=user-KPNf2CXgFmYY
+              password=ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW
               tenant-name=8966606530353673
               domain-name=Default
-              region=GRA5
+              region-name=DE1
         storageClass:
           enabled: true
           custom: |-
