--- a/apps/templates/system/snapshot/velero.yaml
+++ b/apps/templates/system/snapshot/velero.yaml
@@ -49,7 +49,7 @@ spec:
         snapshotsEnabled: true
         schedules:
           keycloak:
-            disabled: false
+            disabled: true
             schedule: "0 0 * * *"
             template:
               ttl: 168h # 1 week
