--- a/apps/templates/system/velero/schedules.yaml
+++ b/apps/templates/system/velero/schedules.yaml
@@ -11,4 +11,4 @@ spec:
     includedResources:
       - '*'
     ttl: 168h
-  useOwnerReferencesInBackup: 'true'
+  useOwnerReferencesInBackup: true
